plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:32.0.1-android'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.5'
    implementation 'org.yaml:snakeyaml:2.2'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED'
}

application {
    mainClass = 'com.path.variable.mqtt.pub.demo.App'
}
